--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>新蛋网</title>
+    <link rel="stylesheet" href="">
 </head>
 <body>
-    <header>
-        <div class="top">
-            
-        </div>
+    <header id="header">
+       <section class="top_nav">
+            <ul class="l">
+                <li><a href="javascript:">掌上新蛋</a></li>
+                <li><a href="javascript:">企业团购</a></li>
+            </ul>
+            <ul>
+                <li><a href="javascript:"></a></li>
+                <li><a href="javascript:"></a></li>
+                <li><a href="javascript:"></a></li>
+                <li><a href="javascript:"></a></li>
+                <li><a href="javascript:"></a></li>
+                <li><a href="javascript:"></a></li>
+                <li><a href="javascript:"></a></li>
+            </ul>
+       </section>
+       <section class="top_mian">
 
+       </section>
     </header>
 </body>
 </html>
