--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>新蛋网</title>
-    <link rel="stylesheet" href="./dist/css.css">
+    <link rel="stylesheet" href="./css/best.css">
+    <link rel="stylesheet" href="./css/css.css">
+    
 </head>
 <body>
     <header id="header">
        <section class="top_nav">
             <ul class="l">
-                <li><a href="javascript:">xixix</a></li>
+                <li><a href="javascript:">掌上新蛋</a></li>
                 <li><a href="javascript:">企业团购</a></li>
             </ul>
             <ul>
@@ -28,5 +30,6 @@
 
        </section>
     </header>
+    <script src="./js/xindan.js"></script>
 </body>
 </html>
