写了两个功能

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,11 @@
 </head>
 <body>
     <header id="header">
-       <section class="top_nav">
+       <section class="top_nav w">
+           
             <ul class="l">
-                <li><a href="javascript:">掌上新蛋</a></li>
-                <li><a href="javascript:">企业团购</a></li>
+                <li class="l"><a href="javascript:">掌上新蛋</a></li>
+                <li class="l"><a href="javascript:">企业团购</a></li>
             </ul>
             <ul>
                 <li><a href="javascript:"></a></li>
@@ -29,6 +30,23 @@
        <section class="top_mian">
 
        </section>
+       <div>
+            <ul class="er">
+                <li class="l"><a href="javascript:">
+                    <p>新蛋APP</p>
+                     <img src="./resource/img/qrcode_app.png" alt="">
+                     <P>全新APP</P>
+                     <P>让购物成为享受</P>
+                </a></li>
+                <li class="r"><a href="javascript:">
+                    <p>新蛋公众号</p>
+                    <img src="./resource/img/qrcode_wechat.jpg" alt="">
+                    <P>精彩文章</P>
+                    <P>周周更不停</P>
+                </a></li>
+            </ul>
+
+        </div>
     </header>
     <script src="./js/xindan.js"></script>
 </body>
