--- a/src/index.html
+++ b/src/index.html
@@ -10,27 +10,45 @@
     
 </head>
 <body>
+    <script src="./js/vendor/jQuery.js"></script>
     <header id="header">
        <section class="top_nav w">
            
             <ul class="l">
-                <li class="l"><a href="javascript:">掌上新蛋</a></li>
-                <li class="l"><a href="javascript:">企业团购</a></li>
+                <li class="r"><a href="javascript:">企业团购</a></li>
+                <li class="r"><a href="javascript:">掌上新蛋</a></li> 
             </ul>
-            <ul>
-                <li><a href="javascript:"></a></li>
-                <li><a href="javascript:"></a></li>
-                <li><a href="javascript:"></a></li>
-                <li><a href="javascript:"></a></li>
-                <li><a href="javascript:"></a></li>
-                <li><a href="javascript:"></a></li>
-                <li><a href="javascript:"></a></li>
+            <ul class="r">
+                <li class="l"><a href="javascript:">注册</a></li>
+                <li class="l"><a href="javascript:">登录</a></li>
+                <li class="l"><a href="javascript:">中午好，欢迎来到新蛋购物！</a></li>
+                <li class="l">
+                    <a href="javascript:">我的订单<span class="r"></span></a>
+                    <div>请<a href="javascript:">登录</a>后查看</div>
+                </li>
+                <li class="l">
+                    <a href="javascript:">我的新蛋<span class="r"></span></a>
+                    <div>请<a href="javascript:">登录</a>后查看</div>
+                </li>
+                <li class="l"><a href="javascript:">帮助中心</a></li>
+                <li class="l">
+                    <a href="javascript:">客户服务 <span class="r"></span></a>
+                    <div>
+                        <p>400-820-4400</p>
+                        <p>021-67072699</p>
+                        <p>每天9:00 - 18:00</p>
+                        <ul>
+                            <li><a href="javascript:">在线咨询</a></li>
+                            <li><a href="javascript:">邮件我们</a></li>
+                        </ul>
+                    </div>
+                </li>
             </ul>
        </section>
        <section class="top_mian">
 
        </section>
-       <div>
+       <div class="erweima">
             <ul class="er">
                 <li class="l"><a href="javascript:">
                     <p>新蛋APP</p>
@@ -45,7 +63,6 @@
                     <P>周周更不停</P>
                 </a></li>
             </ul>
-
         </div>
     </header>
     <script src="./js/xindan.js"></script>
