准备二级菜单

--- a/src/index.html
+++ b/src/index.html
@@ -45,9 +45,22 @@
                 </li>
             </ul>
        </section>
-       <section class="top_mian">
-
-       </section>
+       <div class="header_top_main">
+            <section class="top_main w">
+                <h1 class="l"><a href="javascript:;"><img src="./resource/img/logocn_1213.png" alt=""></a></h1>
+                <div class="search l">
+                    <input type="text" name="" id="" placeholder="请您输入要搜索的关键字">
+                    <input type="submit" value="搜索">
+                    <ul>
+                        <li><a href="javascript:;">Bose</a></li>
+                        <li><a href="javascript:;">iPhone XS</a></li>
+                        <li><a href="javascript:;">mate20</a></li>
+                        <li><a href="javascript:;">Thinkpad</a></li>
+                        <li><a href="javascript:;">索尼电视机</a></li>
+                    </ul>
+                </div>
+            </section>
+       </div>
        <div class="erweima">
             <ul class="er">
                 <li class="l"><a href="javascript:">
@@ -65,6 +78,113 @@
             </ul>
         </div>
     </header>
+    <nav id="nav">   
+        <section class="nav_top w">
+            <ul class="l">
+                <li class="l"><a href="javascript:;">全部商品分类</a></li>
+                <li class="l"><a href="javascript:;">首页</a></li>
+                <li class="l"><a href="javascript:;">限时抢购</a></li>
+                <li class="l"><a href="javascript:;">团团赚</a></li>
+                <li class="l"><a href="javascript:;">爱车配</a></li>
+                <li class="l"><a href="javascript:;">二手宝库</a></li>
+            </ul>
+        </section>
+    </nav>
+    <div id="banner" class="w">
+        <section class="nav_right">
+            <ul class="l">
+                <li class="li_1">
+                    <div>
+                        <p class="li_1_p1">
+                            <span></span>
+                            <a href="javascript:;">手机</a>
+                            <a href="javascript:;">摄影</a>
+                            <a href="javascript:;">苹果</a>
+                            <a href="javascript:;">》</a>   
+                        </p>
+                        <p class="li_1_p2">
+                            <a href="javascript:;">智能手机</a>
+                            <a href="javascript:;">微单</a>
+                            <a href="javascript:;">数码包</a>
+                        </p>
+                    </div>
+                </li>
+                <li class="li_2">
+                        <div>
+                            <p class="li_2_p1">
+                                <span></span>
+                                <a href="javascript:;">电脑</a>
+                                <a href="javascript:;">外设</a>
+                                <a href="javascript:;">办公</a>
+                                <a href="javascript:;">》</a>   
+                            </p>
+                            <p class="li_2_p2">
+                                <a href="javascript:;">平板</a>
+                                <a href="javascript:;">笔记本</a>
+                                <a href="javascript:;">路由器</a>
+                            </p>
+                            <p class="li_2_p3">
+                                <a href="javascript:;">耳机耳麦</a>      
+                            </p>
+                        </div>
+                </li>
+                <li class="li_3">
+                        <div>
+                            <p class="li_3_p1">
+                                <span></span>
+                                <a href="javascript:;">家用电器</a>
+                                <a href="javascript:;">》</a>   
+                            </p>
+                            <p class="li_3_p2">
+                                <a href="javascript:;">净化器</a>
+                                <a href="javascript:;">美容仪</a>
+                                <a href="javascript:;">吸尘器</a>
+                            </p>
+                            <p class="li_3_p3">
+                                <a href="javascript:;">微波炉</a>      
+                            </p>
+                        </div>
+                </li>
+                <li class="li_4">
+                    <div>
+                        <p class="li_4_p1">
+                            <span></span>
+                            <a href="javascript:;">生活百货</a>
+                            <a href="javascript:;">》</a>   
+                        </p>
+                        <p class="li_4_p2">
+                            <a href="javascript:;">汽车用品</a>
+                            <a href="javascript:;">个护清洁</a>   
+                        </p>
+                        <p class="li_4_p3">
+                            <a href="javascript:;">家居</a>
+                            <a href="javascript:;">厨用</a>  
+                            <a href="javascript:;">钟表</a>  
+                            <a href="javascript:;">礼品</a> 
+                        </p>
+                        <p class="li_4_p4">
+                            <a href="javascript:;">服饰</a>
+                            <a href="javascript:;">女装</a>  
+                            <a href="javascript:;">内衣</a>  
+                            <a href="javascript:;">珠宝</a> 
+                        </p>
+                        <p class="li_4_p5">
+                            <a href="javascript:;">母婴</a>
+                            <a href="javascript:;">玩具</a>  
+                            <a href="javascript:;">食品</a>  
+                            <a href="javascript:;">酒饮</a> 
+                        </p>
+                        <p class="li_4_p6">
+                            <a href="javascript:;">鞋靴</a>
+                            <a href="javascript:;">箱包</a>  
+                            <a href="javascript:;">运动</a>  
+                            <a href="javascript:;">户外</a> 
+                        </p>
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </div>
     <script src="./js/xindan.js"></script>
 </body>
 </html>
