登陆注册文件夹搞定

--- a/src/html/login.html
+++ b/src/html/login.html
@@ -4,9 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>login</title>
+    <link rel="stylesheet" href="../css/best.css">
+    <link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
-    <div></div>
+    <script src="../js/vendor/jQuery.js"></script>
+    <header id="header">
+        <section class="top_nav w">
+
+            <ul class="l">
+                <li class="r"><a href="javascript:">企业客户</a></li>
+                <li class="r"><a href="javascript:">掌上新蛋</a></li>
+            </ul>
+            <ul class="r">
+                <li class="l"><a href="javascript:">欢迎来到新蛋购物！</a></li>
+                <li class="l"><a href="javascript:">帮助中心</a></li>
+                <li class="l">
+                    <a href="javascript:">客户服务 <span class="r"></span></a>
+                    <div>
+                        <p>400-820-4400</p>
+                        <p>021-67072699</p>
+                        <p>每天9:00 - 18:00</p>
+                        <ul>
+                            <li><a href="javascript:">在线咨询</a></li>
+                            <li><a href="javascript:">邮件我们</a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </section>
+        <div class="header_top_main">   
+            <section class="top_main w">
+                <h1 class="l"><a href="javascript:;"><img src="../resource/img/logocn_1213.png" alt=""></a></h1>
+                <div class="search l">
+                    欢迎登陆
+                </div>
+            </section>
+        </div>
+        <div class="erweima">
+            <ul class="er">
+                <li class="l"><a href="javascript:">
+                        <p>新蛋APP</p>
+                        <img src="../resource/img/qrcode_app.png" alt="">
+                        <P>全新APP</P>
+                        <P>让购物成为享受</P>
+                    </a></li>
+                <li class="r"><a href="javascript:">
+                        <p>新蛋公众号</p>
+                        <img src="../resource/img/qrcode_wechat.jpg" alt="">
+                        <P>精彩文章</P>
+                        <P>周周更不停</P>
+                    </a></li>
+            </ul>
+        </div>
+    </header>
+    <main id="main">
+        <div class="w">
+            <img src="" alt="">
+        </div>
+    </main>
+    <script src="../js/login.js"></script>
 </body>
 </html>
