--- a/src/html/login.html
+++ b/src/html/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="../css/best.css">
     <link rel="stylesheet" href="../css/login.css">
 </head>
+
 <body>
     <script src="../js/vendor/jQuery.js"></script>
     <header id="header">
@@ -34,9 +36,9 @@
                 </li>
             </ul>
         </section>
-        <div class="header_top_main">   
+        <div class="header_top_main">
             <section class="top_main w">
-                <h1 class="l"><a href="javascript:;"><img src="../resource/img/logocn_1213.png" alt=""></a></h1>
+                <h1 class="l"><a href="../index.html"><img src="../resource/img/logocn_1213.png" alt=""></a></h1>
                 <div class="search l">
                     欢迎登陆
                 </div>
@@ -61,9 +63,26 @@
     </header>
     <main id="main">
         <div class="w">
-            <img src="" alt="">
+            <img src="../resource/img/logoin_bg.jpg" alt="" class="l">
+            <div class="login">
+                <h2>登录新蛋 <a href="./signin.html">注册新用户》</a></h2>
+                <input type="text" placeholder="用户名/已验证手机或邮箱">
+                <input type="text" placeholder="请输入密码">
+                <p>
+                    <a href="javascript:;">账户安全</a> 
+                    <a href="javascript:;">忘记密码？</a>
+                </p>
+                <input type="submit" value="登录">
+                <img src="../resource/img/微信截图_20190227082731.png" alt="">
+            </div>
         </div>
     </main>
+    <footer id="footer">
+        <div class="w">
+            <img src="../resource/img/微信截图_20190227092139.png" alt="">
+        </div>
+    </footer>
     <script src="../js/login.js"></script>
 </body>
+
 </html>
