--- a/src/html/signin.html
+++ b/src/html/signin.html
@@ -36,9 +36,9 @@
         </section>
         <div class="header_top_main">   
             <section class="top_main w">
-                <h1 class="l"><a href="javascript:;"><img src="../resource/img/logocn_1213.png" alt=""></a></h1>
+                <h1 class="l"><a href="../index.html"><img src="../resource/img/logocn_1213.png" alt=""></a></h1>
                 <div class="search l">
-                    欢迎登陆
+                    新用户注册
                 </div>
             </section>
         </div>
@@ -61,9 +61,19 @@
     </header>
     <main id="main">
         <div class="w">
-            <img src="" alt="">
+            <h4>已是新蛋会员 现在  <a href="./login.html">登录</a> </h4>
+            <img src="../resource/img/微信截图_20190227094928.png" alt="">
+            <span>手机号码:</span>  <input type="text">
+             <span>图形验证码:</span>   <input type="text"> 
+            <img src="../resource/img/微信截图_20190227095203.png" alt="">
+            <input type="sunmit" value="获取短信验证码">
         </div>
     </main>
+    <footer id="footer">
+            <div class="w">
+                <img src="../resource/img/微信截图_20190227092139.png" alt="">
+            </div>
+        </footer>
     <script src="../js/singin.js"></script>
 </body>
 </html>
