注册ajax没成功

--- a/src/html/login.html
+++ b/src/html/login.html
@@ -66,13 +66,13 @@
             <img src="../resource/img/logoin_bg.jpg" alt="" class="l">
             <div class="login">
                 <h2>登录新蛋 <a href="./signin.html">注册新用户》</a></h2>
-                <input type="text" placeholder="用户名/已验证手机或邮箱">
-                <input type="text" placeholder="请输入密码">
+                <input type="username" placeholder="用户名/已验证手机或邮箱" class="username">
+                <input type="password" placeholder="请输入密码" class="password">
                 <p>
                     <a href="javascript:;">账户安全</a> 
                     <a href="javascript:;">忘记密码？</a>
                 </p>
-                <input type="submit" value="登录">
+                <input type="submit" value="登录" class="login_submit">
                 <img src="../resource/img/微信截图_20190227082731.png" alt="">
             </div>
         </div>
