--- a/src/html/signin.html
+++ b/src/html/signin.html
@@ -63,10 +63,11 @@
         <div class="w">
             <h4>已是新蛋会员 现在  <a href="./login.html">登录</a> </h4>
             <img src="../resource/img/微信截图_20190227094928.png" alt="">
-            <span>手机号码:</span>  <input type="text">
-             <span>图形验证码:</span>   <input type="text"> 
+            <span>手机号码:</span>  <input type="text" class="text">
+            <span>图形验证码:</span>   <input type="text" >  
             <img src="../resource/img/微信截图_20190227095203.png" alt="">
-            <input type="sunmit" value="获取短信验证码">
+            <input type="submit" value="注册" class="submit">
+            <span>密码:</span>  <input type="text" class="password">
         </div>
     </main>
     <footer id="footer">
