--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,11 @@
                 <li class="l"><a href="javascript:">中午好，欢迎来到新蛋购物！</a></li>
                 <li class="l">
                     <a href="javascript:">我的订单<span class="r"></span></a>
-                    <div>请<a href="javascript:">登录</a>后查看</div>
+                    <div>请<a href="./html/login.html">登录</a>后查看</div>
                 </li>
                 <li class="l">
                     <a href="javascript:">我的新蛋<span class="r"></span></a>
-                    <div>请<a href="javascript:">登录</a>后查看</div>
+                    <div>请<a href="./html/login.html">登录</a>后查看</div>
                 </li>
                 <li class="l"><a href="javascript:">帮助中心</a></li>
                 <li class="l">
