--- a/src/index.html
+++ b/src/index.html
@@ -662,7 +662,7 @@
                 <h2>手机·摄影</h2>
                 <div>
                     <ul class="phone_left_top">
-                        <li>
+                        <li class="top">
                             <a href="javascript:;">
                                 <img src="./resource/img/A04-112-5TX.jpg" alt="">
                                 <p>
@@ -671,9 +671,21 @@
                                 </p>
                             </a>
                         </li>
-                        <li class="phone_left_top_li2"><a href="javascript:;"><img src="./resource/img/P202020202.jpg"
-                                    alt=""></a></li>
-                        <li>
+                        <li class="phone_left_top_li2">
+                            <ul class="list">
+                                <li><a href="javascript:;"><img src="./resource/img/P202020202.jpg" alt=""></a></li>
+                                <li><a href="javascript:;"><img src="./resource/img/iphonexs123.jpg" alt=""></a></li>
+                                <li><a href="javascript:;"><img src="./resource/img/485x205 (1).jpg" alt=""></a></li>
+                                <li><a href="javascript:;"><img src="./resource/img/480x205-1.jpg" alt=""></a></li>
+                                <li><a href="javascript:;"><img src="./resource/img/P202020202.jpg" alt=""></a></li>
+                            </ul>
+                            <ul class="circle">
+                                <li class="focus"></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>  
+                        <li class="top">
                             <a href="javascript:;">
                                 <img src="./resource/img/A1R-184-04C.jpg" alt="">
                                 <p>
@@ -787,8 +799,15 @@
                                 </p>
                             </a>
                         </li>
-                        <li class="phone_left_top_li2"><a href="javascript:;"><img src="./resource/img/480x205.jpg"
-                                    alt=""></a></li>
+                        <li class="phone_left_top_li2">
+                            <ul class="list">
+                                <li><a href="javascript:;"><img src="./resource/img/480x205.jpg" alt=""></a></li>
+                                <li><a href="javascript:;"><img src="./resource/img/iphonexs123.jpg" alt=""></a></li>
+                                <li><a href="javascript:;"><img src="./resource/img/485x205 (1).jpg" alt=""></a></li>
+                                <li><a href="javascript:;"><img src="./resource/img/480x205-1.jpg" alt=""></a></li>
+                                <li><a href="javascript:;"><img src="./resource/img/480x205.jpg" alt=""></a></li>
+                            </ul>
+                        </li>
                         <li>
                             <a href="javascript:;">
                                 <img src="./resource/img/A23-163-27Q.jpg" alt="">
@@ -1126,7 +1145,7 @@
             <div class="w">
                 <img src="./resource/img/微信截图_20190227092139.png" alt="">
             </div>
-        </footer>
+    </footer>
     <script src="./js/xindan.js"></script>
 </body>
 
